--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </nav>
 
   <div id="app" class="max-w-7xl mx-auto p-8">
-    <h1 class="text-4xl font-bold mb-6 text-center">Base64 Encoder</h1>
+    <h1 class="text-4xl font-bold mb-6 text-center">TheNetly</h1>
     
     <div class="mb-6 flex justify-center">
         <button @click="setMode('text')" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded mr-4">
