--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
       mobileMenu.style.display = mobileMenu.style.display === 'none' ? 'block' : 'none';
     });
   </script>
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-RLJ7GZ2LCT"></script>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YD596NQD4K"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-RLJ7GZ2LCT');
+  gtag('config', 'G-YD596NQD4K');
 </script>
 </body>
 </html>
