--- a/policy.html
+++ b/policy.html
@@ -87,5 +87,14 @@
       mobileMenu.style.display = mobileMenu.style.display === 'none' ? 'block' : 'none';
     });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YD596NQD4K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YD596NQD4K');
+</script>
 </body>
 </html>
