--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
       <div class="flex items-center justify-between h-16">
         <div class="flex-shrink-0">
-          <a href="/" class="text-white text-xl font-bold">TheNetly Base64 Encoder</a>
+          <a href="/" class="text-white text-xl font-bold">TheNetly</a>
         </div>
         <div class="hidden md:block">
           <div class="ml-4 flex items-baseline space-x-4">
