--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
   <div class="bg-white pt-4 sm:pt-10 lg:pt-12">
     <footer class="mx-auto max-w-7xl px-4 md:px-8">
-      <div class="py-8 text-center text-sm">© 2024 - Base64 Encoder | All rights reserved.</div>
+      <div class="py-8 text-center text-sm">© 2024 - TheNetly | All rights reserved.</div>
     </footer>
   </div>
   <script>
