--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Base64 Encoder - Encode Text, Images to Base64">
   <meta name="twitter:description" content="Base64 Encoder is a free online tool that allows you to encode text to Base64 format, as well as decode Base64 strings back to their original form. Easily convert and share data with our user-friendly interface.">
-  <meta name="twitter:image" content="https://www.base64-encoder.com/icon.png">
+  <meta name="twitter:image" content="https://www.thenetly.com/icon.png">
   <!-- Facebook Card -->
-  <meta property="og:title" content="Base64 Encoder - Encode Text, Images to Base64">
-  <meta property="og:description" content="Base64 Encoder is a free online tool that allows you to encode text to Base64 format, as well as decode Base64 strings back to their original form. Easily convert and share data with our user-friendly interface.">
-  <meta property="og:image" content="https://www.base64-encoder.com/icon.png">
-  <meta property="og:url" content="https://www.base64-encoder.com">
+  <meta property="og:title" content="TheNetly Base64 Encoder - Encode Text, Images to Base64">
+  <meta property="og:description" content="TheNetly Base64 Encoder is a free online tool that allows you to encode text to Base64 format, as well as decode Base64 strings back to their original form. Easily convert and share data with our user-friendly interface.">
+  <meta property="og:image" content="https://www.thenetly.com/icon.png">
+  <meta property="og:url" content="https://www.thenetly.com">
   <meta property="og:type" content="website">
   
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9354746037074515" crossorigin="anonymous"></script>
