--- a/policy.html
+++ b/policy.html
@@ -11,13 +11,13 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Base64 Encoder - Encode Text, Images to Base64">
   <meta name="twitter:description" content="Base64 Encoder is a free online tool that allows you to encode text to Base64 format, as well as decode Base64 strings back to their original form. Easily convert and share data with our user-friendly interface.">
-  <meta name="twitter:image" content="https://www.base64-encoder.com/icon.png">
+  <meta name="twitter:image" content="https://www.thenetly.com/icon.png">
   
   <!-- Facebook Card -->
   <meta property="og:title" content="Base64 Encoder - Encode Text, Images to Base64">
   <meta property="og:description" content="Base64 Encoder is a free online tool that allows you to encode text to Base64 format, as well as decode Base64 strings back to their original form. Easily convert and share data with our user-friendly interface.">
-  <meta property="og:image" content="https://www.base64-encoder.com/icon.png">
-  <meta property="og:url" content="https://www.base64-encoder.com">
+  <meta property="og:image" content="https://www.thenetly.com/icon.png">
+  <meta property="og:url" content="https://www.thenetly.com">
   <meta property="og:type" content="website">
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9354746037074515" crossorigin="anonymous"></script>
@@ -53,7 +53,7 @@
 
   <div class="max-w-7xl mx-auto py-8 px-4">
     <h1 class="text-2xl font-bold mb-2">Privacy Policy</h1>
-    <p class="mb-4">At Base64 Encoder, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you use our website and services.</p>
+    <p class="mb-4">At TheNetly.com, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your information when you use our website and services.</p>
 
     <h2 class="text-2xl font-bold mb-2">Information Collection</h2>
     <p class="mb-4">We do not collect any personal information from you when you use our Base64 Encoder tool. All data entered into the tool, including text, images, and files, is processed entirely in your browser and is not transmitted to our servers.</p>
@@ -71,12 +71,12 @@
     <p class="mb-4">We reserve the right to update or modify this Privacy Policy at any time. Any changes will be effective immediately upon posting the revised policy on our website.</p>
 
     <h2 class="text-2xl font-bold mb-2">Contact Us</h2>
-    <p>If you have any questions or concerns about our Privacy Policy, please contact us at privacy@base64-encoder.com.</p>
+    <p>If you have any questions or concerns about our Privacy Policy, please contact us at privacy@thenetly.com.</p>
   </div>
 
   <div class="bg-white pt-4 sm:pt-10 lg:pt-12">
     <footer class="mx-auto max-w-screen-2xl px-4 md:px-8">  
-      <div class="py-8 text-center text-sm">© 2024 - Base64 Encoder | All rights reserved.</div>
+      <div class="py-8 text-center text-sm">© 2024 - TheNetly | All rights reserved.</div>
     </footer>
   </div>
   <script>
